--- a/notify/package.json
+++ b/notify/package.json
@@ -19,6 +19,8 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.10.1",
+    "validator": "^13.11.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
