--- a/notify/package.json
+++ b/notify/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.2",
     "nodemon": "^3.0.1",
